--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -15,6 +15,6 @@ thanks_dev: # Replace with a single thanks.dev username
 custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 
 github: [octocat, surftocat]
-patreon: octocat
+patreon: github
 tidelift: npm/octo-package
-custom: ["https://www.paypal.me/octocat", octocat.com]
+custom: ["https://github.com/dengjing464/pcem-86box-pcbox-other/blob/main/%E6%8D%90%E8%B5%A0%20Donation.md", github.com]
