--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -17,4 +17,4 @@ custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
 github: [octocat, surftocat]
 patreon: github
 tidelift: npm/octo-package
-custom: ["https://github.com/dengjing464/pcem-86box-pcbox-other/blob/main/%E6%8D%90%E8%B5%A0%20Donation.md", github.com]
+custom: ["https://github.com/dengjing464/pcem-86box-pcbox-other/blob/main/%E6%8D%90%E8%B5%A0%20Donation.md"]
